--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "webpack",
     "eslint": "eslint src/**/*.js",
     "start": "webpack-dev-server --open",
-    "test": "npm run eslint"
+    "test": "npm run eslint",
+    "serv": "start json-server --watch server/data.json --port 3003"
   },
   "devDependencies": {
     "css-loader": "3.2.0",
